[project]
name = "acachamaker"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "PyQt6>=6.11.0",
    "ffmpeg-python>=0.2.0",
    "requests>=2.31.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
